--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,6 @@ name: Sync to Hugging Face hub
 on:
   push:
     branches: [main]
-
-  # to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
@@ -14,7 +12,13 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
+
+      - name: Add Hugging Face remote
+        run: |
+          git remote add space https://huggingface.co/spaces/your-hf-username/langchain-search-bot-from-github
+
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://spearb0lt:$HF_TOKEN@huggingface.co/spaces/spearb0lt/langchain-search-bot-from-github main
+        run: |
+          git push --force https://your-hf-username:$HF_TOKEN@huggingface.co/spaces/your-hf-username/langchain-search-bot-from-github main
